# Tanya

./: .gitignore  CONTRIBUTING.md  FEATURES.md  INSTALL.md  LICENSE  Modelfile  README.md  TODO.md  __init__.py  app.py  build.sh  download_gguf.sh  download_hf_model.py  files.py  glm5_isolated_test.py  main.py  mixtral_isolated_test.py  mixtral_local_test.py  requirements.txt  tanya_api.py  tanya_chat_history.json  tanya_finetune_dataset.jsonl  tanya_memory.db  tanya_memory.json  tanya_terminal_chat.py  tanya_user_model.json  tanya_web.py
ada/src/: ada_validator.adb
asm/src/: asm_parser.asm
backend/api/: ApiServer.java
backend/database/: schema.sql
backend/ml/: analyze.R  analyzer.py  compute.f90  kid_summarizer.py
backend/workers/: collector.go
brain_py/autonomy/: background_runner.py  curiosity_loop.py  curiosity_manager.py  explorer.py
brain_py/cognition/: thoughts.py
brain_py/core/: skill_registry.py
brain_py/dialogue/: conversation.py
collect/: __init__.py  html_scraper.py  rss_scraper.py  storage.py
core/: text_processor.pl
core_rust/: Cargo.toml
core_rust/src/: lib.rs  main.rs  memory.rs  reasoning.rs  skills.rs
data/: html_sources.json  news.json  sources.json
integrations/: newsletter.rb  webhook.php
lua/: scraper.lua
node-collector/: index.js  package.json
rust/: Cargo.toml
rust/src/: dedup.rs  rss_fetcher.rs  search.rs  storage.rs
scratch/: tanya_news.json
tests/: test_memory.py  test_reasoning.py  test_skills.py
tools/: benchmark_llama.py  run_chat_once.py  test_chat_harness.py  test_ollama_harness.py  warm_llama.py
(+72 files in other folders)
