[package]
name = "tanya-core"
version = "0.1.0"
edition = "2021"
description = "Tanya AI Agent Framework - Rust Core"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for future LLM integration)
reqwest = { version = "0.11", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[lib]
name = "tanya_core"
path = "src/lib.rs"

[[bin]]
name = "tanya-core"
path = "src/main.rs"
