[package]
name = "tanya-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
quick-xml = "0.31"
similar = "2.4"

[[bin]]
name = "rss_fetcher"
path = "src/rss_fetcher.rs"

[[bin]]
name = "search"
path = "src/search.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

[[bin]]
name = "dedup"
path = "src/dedup.rs"